<resources>
    <string name="app_name">爱员工</string>
    <!-- 下拉列表 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开立即刷新</string>
    <string name="xlistview_header_hint_refreshing">正在刷新\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开后加载</string>
    <string name="xlistview_footer_hint_loading">正在加载\u2026</string>
    <string name="xlistview_footer_hint_nodata">抱歉，没有更多啦</string>

    <string name="txt_layout_empty">暂时还没有相关内容，看看别的？</string>
    <string name="txt_click_here_to_reload">重新加载</string>

    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="txt_on_wait">请稍等&#8230;</string>
    <string name="text_login_out">退出</string>
    <string name="text_login_again">"重新登录"</string>

    <string name="text_hot_line">"400-800-8888"</string>

    <string name="hello" translatable="false">Hello World, XListViewActivity</string>
    <string name="txt_back">返回</string>
    <string name="txt_close">关闭</string>

    <string name="txt_edit_gesture_pwd">修改手势密码</string>
    <string name="txt_edit_gesture">修改手势密码</string>
    <string name="txt_unlock_error_tip1">密码错误</string>
    <string name="txt_set_gesture_pattern">请绘制解锁图案</string>
    <string name="txt_gesture_min_length">最少链接4个点, 请重新输入</string>
    <string name="txt_gesture_error">与上一次绘制不一致，请重新绘制</string>
    <string name="txt_gesture_skip">跳过</string>
    <string name="txt_forget_gesture">忘记手势密码</string>
    <string name="txt_switch_gesture">切换其他账户</string>
    <string name="txt_unlock">解锁</string>
    <string name="txt_unlock_error_tip">密码错误，还可以再输入%1$s次</string>
    <string name="txt_reset_gesture_code">重新设置手势密码</string>
    <string name="txt_set_again_gesture_pattern">请再次绘制解锁图案</string>
    <string name="txt_setting_gesture_code">设置手势密码</string>

    <string name="phone_num">手机号</string>
    <string name="phone_num_init">请输入手机号码</string>

    <string name="password">密码</string>
    <string name="password_init">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="txt_forget_pwd">忘记密码?</string>

    <string name="contact_service">请联系客服</string>
    <string name="service_phone">客服电话028-82869536</string>
    <string name="call_service">拨打电话</string>
    <string name="txt_gesture_pwd">手势密码</string>

    <string name="txt_register">注册</string>
    <string name="txt_complete">完成</string>

    <string name="picture_from_camera">拍照</string>
    <string name="picture_from_album">选择本地图片</string>
    <string name="image_select_crop_img">正在剪切图片&#8230;</string>

    <string name="contact_detail_edit">编辑</string>
    <string name="contact_edit_save">保存</string>
</resources>
