<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="23dp"
    android:layout_marginRight="23dp"
    android:background="@drawable/bg_common_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/contact_service"
            android:singleLine="true"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/txt_size_15"
            android:visibility="visible" />


        <TextView
            android:id="@+id/txt_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/service_phone"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/txt_size_16" />


        <View
            android:id="@+id/v_dialog_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/color_efefef"/>

        <LinearLayout
            android:id="@+id/ll_dialog_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/btn_dialog_negative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_negative_bottom_left"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/txt_size_16"
                android:visibility="visible"/>

            <View
                android:id="@+id/v_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/color_d9d9d9"
                android:visibility="visible">
            </View>

            <Button
                android:id="@+id/btn_dialog_positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="-1dp"
                android:layout_weight="1"
                android:text="@string/call_service"
                android:background="@drawable/btn_red_right"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_16"
                android:visibility="visible">
            </Button>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>