<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_common_dialog_cir"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_negative_top"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/txt_size_18"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_cacaca"/>

    <LinearLayout
        android:id="@+id/wheel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.wintrue.ffxs.widget.wheel.WheelVerticalView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:selectionDivider="@color/color_f44a4a"
            app:selectionDividerHeight="1dp"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_cacaca"/>
        <com.wintrue.ffxs.widget.wheel.WheelVerticalView
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:selectionDivider="@color/color_f44a4a"
            app:selectionDividerHeight="1dp"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_cacaca"/>
        <com.wintrue.ffxs.widget.wheel.WheelVerticalView
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:selectionDivider="@color/color_f44a4a"
            app:selectionDividerHeight="1dp"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_cacaca"/>
        <com.wintrue.ffxs.widget.wheel.WheelVerticalView
            android:id="@+id/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:selectionDivider="@color/color_f44a4a"
            app:selectionDividerHeight="1dp"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_cacaca"
            />
        <com.wintrue.ffxs.widget.wheel.WheelVerticalView
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:selectionDivider="@color/color_f44a4a"
            app:selectionDividerHeight="1dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_cacaca"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="-1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_negative_bottom_left"
            android:singleLine="true"
            android:textColor="@color/color_5399ee"
            android:textSize="@dimen/txt_size_18"
            android:text="@string/cancel"/>

        <View
            android:id="@+id/v_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/color_d9d9d9">
        </View>

        <Button
            android:id="@+id/btn_ensure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_positive"
            android:singleLine="true"
            android:textColor="@color/color_5399ee"
            android:textSize="@dimen/txt_size_18"
            android:text="@string/ensure"/>
    </LinearLayout>
</LinearLayout>